# mds_kernel

./: .clang-format  .gitignore  BUILD.gn  README.md  xmake.lua
inc/: mds_def.h  mds_dev.h  mds_log.h  mds_lpc.h  mds_sys.h  mds_utils.h
include/: mds_log.h
include/kernel/: mds_sys.h
src/: device.c  library.c  log.c  nosys.c  object.c
src/arch/cortex-m/: thumbv7em.c
src/arch/risc-v/: riscv.c
src/core/cortex-m/: thumbv7em.c
src/core/risc-v/: riscv.c
src/lib/: library.c  tree.c
src/mem/: llff.c  memory.c
src/sys/: clock.c  idle.c  ipc.c  kernel.c  kernel.h  lpc.c  scheduler.c  thread.c  timer.c  workq.c
src/sys/ipc/: condition.c  event.c  mempool.c  msgqueue.c  mutex.c  rwlock.c  semaphore.c
